--- a/app/src/main/res/layout/add_friends_layout.xml
+++ b/app/src/main/res/layout/add_friends_layout.xml
@@ -36,7 +36,7 @@
                         app:layout_collapseMode="parallax" />
 
                     <SearchView
-                        android:id="@+id/search_bar"
+                        android:id="@+id/search_bar_friends"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
