--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -11,13 +11,14 @@
         android:id="@+id/friendNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:background="@color/white"
         android:hint="@string/sender"
-        android:textSize="20sp"
         android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/friendAvatar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -33,7 +34,8 @@
         android:id="@+id/friendAvatar"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:layout_constraintEnd_toStartOf="@+id/friendNickname"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/friendNickname"
         tools:srcCompat="@tools:sample/avatars" />
