--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -16,7 +16,12 @@
         android:hint="@string/enter_your_nickname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/sign_in_textfields"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"/>
 
     <EditText
         android:id="@+id/passwordRegister"
@@ -30,7 +35,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userNameRegister"
-        tools:ignore="TextFields" />
+        tools:ignore="TextFields"
+        android:background="@drawable/sign_in_textfields"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"/>
 
     <EditText
         android:id="@+id/job"
@@ -44,7 +54,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordRegister"
-        tools:ignore="TextFields" />
+        tools:ignore="TextFields"
+        android:background="@drawable/sign_in_textfields"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"/>
 
     <Button
         android:id="@+id/signUpRegisterButton"
