--- a/app/src/main/res/layout/sms_list_me_item.xml
+++ b/app/src/main/res/layout/sms_list_me_item.xml
@@ -15,7 +15,6 @@
         android:id="@+id/card_gchat_message_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#774df2"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
@@ -38,7 +37,9 @@
                 android:paddingLeft="12dp"
                 android:paddingTop="8dp"
                 android:paddingRight="12dp"
+                android:paddingBottom="8dp"
                 android:text="This is a Message"
+                android:background="@drawable/sent_sms_background"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
         </LinearLayout>
