--- a/app/src/main/res/layout/sms_list_receive_item.xml
+++ b/app/src/main/res/layout/sms_list_receive_item.xml
@@ -10,13 +10,10 @@
 
 
 
-
-
     <androidx.cardview.widget.CardView
         android:id="@+id/card_gchat_message_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#eef1f6"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
@@ -39,7 +36,9 @@
                 android:paddingLeft="12dp"
                 android:paddingTop="8dp"
                 android:paddingRight="12dp"
+                android:paddingBottom="8dp"
                 android:text="Message"
+                android:background="@drawable/sms_received_background"
                 android:textColor="#000000"
                 android:textSize="16sp" />
         </LinearLayout>
