--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#817F7F</color>
     <color name="light_gray">#DAE8F8</color>
+    <color name="received_sms">#EEF1F6</color>
 </resources>
