Chat with friend design

--- a/app/src/main/res/layout/chat_with_friend_layout.xml
+++ b/app/src/main/res/layout/chat_with_friend_layout.xml
@@ -99,7 +99,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/message_field_round">
 
 
         <EditText
@@ -109,24 +110,24 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@+id/button_voice_record"
-            android:background="@android:color/transparent"
-            android:hint="Enter Message"
+            android:hint="@string/message"
             android:inputType="text"
             android:maxLines="6"
             tools:ignore="Autofill"
             android:layout_toLeftOf="@+id/button_voice_record"
-            android:layout_marginLeft="16dp" />
+            android:layout_marginLeft="16dp"/>
 
         <Button
             android:id="@+id/button_voice_record"
-            android:layout_width="64dp"
+            android:layout_width="80dp"
             android:layout_height="48dp"
             android:layout_toLeftOf="@id/button_gchat_send"
+            android:text="Voice"
             android:background="#FFFFFF" />
 
         <Button
             android:id="@+id/button_gchat_send"
-            android:layout_width="64dp"
+            android:layout_width="80dp"
             android:layout_height="48dp"
             android:layout_alignParentEnd="true"
             android:background="?attr/selectableItemBackground"
